--- a/wp-content/plugins/ghes-vlp/views/templates/gameboard-1.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/gameboard-1.html
@@ -1,24 +1,18 @@
-<div class="vlp-intro">Take the journey and see what you can learn with our P.L.A.N.!</div>
-<div class="gameboard-theme-header">
-    <div class='navigation-button last-week'>Last Week</div>
-    <div id='theme-title'>This week's theme: <strong>Space Exploration</strong></div>
-    <div class='navigation-button next-week'>Next Week</div>
-</div>
 <div id="gameboard">
-        <span class='lesson-icon-area one-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area two-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area three-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area four-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area five-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area six-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area seven-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area eight-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area nine-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area ten-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area eleven-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area twelve-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area thirteen-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area fourteen-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area fifteen-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
-        <span class='lesson-icon-area sixteen-position'><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area one-position' onclick="openLessonPopup(this)" data-lesson-number="1"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area two-position' onclick="openLessonPopup(this)" data-lesson-number="2"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area three-position' onclick="openLessonPopup(this)" data-lesson-number="3"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area four-position' onclick="openLessonPopup(this)" data-lesson-number="4"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area five-position' onclick="openLessonPopup(this)" data-lesson-number="5"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area six-position' onclick="openLessonPopup(this)" data-lesson-number="6"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area seven-position' onclick="openLessonPopup(this)" data-lesson-number="7"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area eight-position' onclick="openLessonPopup(this)" data-lesson-number="8"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area nine-position' onclick="openLessonPopup(this)" data-lesson-number="9"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area ten-position' onclick="openLessonPopup(this)" data-lesson-number="10"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area eleven-position' onclick="openLessonPopup(this)" data-lesson-number="11"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area twelve-position' onclick="openLessonPopup(this)" data-lesson-number="12"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area thirteen-position' onclick="openLessonPopup(this)" data-lesson-number="13"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area fourteen-position' onclick="openLessonPopup(this)" data-lesson-number="14"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area fifteen-position' onclick="openLessonPopup(this)" data-lesson-number="15"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
+        <span class='lesson-icon-area sixteen-position' onclick="openLessonPopup(this)" data-lesson-number="16"><img src="/wp-content/plugins/ghes-vlp/assets/icons/heart-icon.png" /></span>
 </div>
