--- a/wp-content/plugins/ghes-vlp/css/gameboard-1.css
+++ b/wp-content/plugins/ghes-vlp/css/gameboard-1.css
@@ -1,8 +1,8 @@
-span.lesson-icon-area.one-position {
-    left: 240px;
-    bottom: 145px;
+.L-1-position {
+    left: 245px;
+    bottom: 110px;
 }
-span.lesson-icon-area.two-position {
-    left: 355px;
-    bottom: 210px;
+.L-2-position {
+    left: 376px;
+    bottom: 170px;
 }
