--- a/wp-content/plugins/ghes-vlp/css/gameboard-1.css
+++ b/wp-content/plugins/ghes-vlp/css/gameboard-1.css
@@ -6,3 +6,59 @@
     left: 376px;
     bottom: 170px;
 }
+.L-3-position {
+    left: 421px;
+    bottom: 291px;
+}
+.L-4-position {
+    left: 236px;
+    bottom: 208px;
+}
+.L-5-position {
+    left: 369px;
+    bottom: 98px;
+}
+.L-6-position {
+    left: 517px;
+    bottom: 122px;
+}
+.L-7-position {
+    left: 615px;
+    bottom: 110px;
+}
+.L-8-position {
+    left: 692px;
+    bottom: 151px;
+}
+.L-9-position {
+    left: 772px;
+    bottom: 249px;
+}
+.L-10-position {
+    left: 647px;
+    bottom: 328px;
+}
+.L-11-position {
+    left: 524px;
+    bottom: 268px;
+}
+.L-12-position {
+    left: 718px;
+    bottom: 355px;
+}
+.L-13-position {
+    left: 522px;
+    bottom: 347px;
+}
+.L-14-position {
+    left: 418px;
+    bottom: 413px;
+}
+.L-15-position {
+    left: 544px;
+    bottom: 483px;
+}
+.L-16-position {
+    left: 627px;
+    bottom: 453px;
+}
