--- a/wp-content/plugins/ghes-vlp/css/gameboard-1.css
+++ b/wp-content/plugins/ghes-vlp/css/gameboard-1.css
@@ -1,64 +1,98 @@
-.L-1-position {
-    left: 245px;
-    bottom: 110px;
+/* Largest size 1200px and up */
+
+@media screen and (min-width: 1200px) {
+    .L-1-position {
+        left: 245px;
+        bottom: 110px;
+    }
+    .L-2-position {
+        left: 376px;
+        bottom: 170px;
+    }
+    .L-3-position {
+        left: 421px;
+        bottom: 291px;
+    }
+    .L-4-position {
+        left: 236px;
+        bottom: 208px;
+    }
+    .L-5-position {
+        left: 369px;
+        bottom: 98px;
+    }
+    .L-6-position {
+        left: 517px;
+        bottom: 122px;
+    }
+    .L-7-position {
+        left: 615px;
+        bottom: 110px;
+    }
+    .L-8-position {
+        left: 692px;
+        bottom: 151px;
+    }
+    .L-9-position {
+        left: 772px;
+        bottom: 249px;
+    }
+    .L-10-position {
+        left: 647px;
+        bottom: 328px;
+    }
+    .L-11-position {
+        left: 524px;
+        bottom: 268px;
+    }
+    .L-12-position {
+        left: 718px;
+        bottom: 355px;
+    }
+    .L-13-position {
+        left: 522px;
+        bottom: 347px;
+    }
+    .L-14-position {
+        left: 418px;
+        bottom: 413px;
+    }
+    .L-15-position {
+        left: 544px;
+        bottom: 483px;
+    }
+    .L-16-position {
+        left: 627px;
+        bottom: 453px;
+    }
 }
-.L-2-position {
-    left: 376px;
-    bottom: 170px;
+
+/* Screen Size Max 1199px min 991px */
+
+@media screen and (max-width: 1199px) and (min-width: 992px) {
+
 }
-.L-3-position {
-    left: 421px;
-    bottom: 291px;
+
+/* Screen Size Max 991px min 768px */
+
+@media screen and (max-width: 991px) and (min-width: 768px) {
+
 }
-.L-4-position {
-    left: 236px;
-    bottom: 208px;
+
+/* Screen Size Max 767px min 600px */
+
+@media screen and (max-width: 767px) and (min-width: 600px) {
+
 }
-.L-5-position {
-    left: 369px;
-    bottom: 98px;
+
+/* Screen Size Max 599px min 500px */
+
+@media screen and (max-width: 599px) and (min-width: 500px) {
+
 }
-.L-6-position {
-    left: 517px;
-    bottom: 122px;
-}
-.L-7-position {
-    left: 615px;
-    bottom: 110px;
-}
-.L-8-position {
-    left: 692px;
-    bottom: 151px;
-}
-.L-9-position {
-    left: 772px;
-    bottom: 249px;
-}
-.L-10-position {
-    left: 647px;
-    bottom: 328px;
-}
-.L-11-position {
-    left: 524px;
-    bottom: 268px;
-}
-.L-12-position {
-    left: 718px;
-    bottom: 355px;
-}
-.L-13-position {
-    left: 522px;
-    bottom: 347px;
-}
-.L-14-position {
-    left: 418px;
-    bottom: 413px;
-}
-.L-15-position {
-    left: 544px;
-    bottom: 483px;
-}
-.L-16-position {
-    left: 627px;
-    bottom: 453px;
+
+/* Screen Size Max 499px min 425px */
+
+@media screen and (max-width: 499px) and (min-width: 425px) {
+
 }
